--- a/force-app/test/default/classes/SummitEventsRegistration_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsRegistration_TEST.cls
@@ -1,3 +1,8 @@
+// Copyright 2019 University of St. Thomas - Minnesota. All rights reserved.
+// Use of this source code is governed by a BSD Revised
+// license that can be found in the LICENSE file.
+// Created by Thaddaeus Dahlberg on 12/28/2020.
+
 @isTest
 public class SummitEventsRegistration_TEST {
     @isTest
